Fix thumbnail not showing in fullscreen

--- a/addons/player-thumb/userstyle.css
+++ b/addons/player-thumb/userstyle.css
@@ -1,11 +1,7 @@
 .sa-project-thumb {
-  display: inline;
   position: absolute;
-  background-color: var(--darkWww-page, #fcfcfc);
-}
-
-.sa-body-editor .sa-project-thumb {
   display: none;
+  background-color: var(--darkWww-page, #fcfcfc);
 }
 
 .sa-controls-disabled > img {
@@ -14,6 +10,7 @@
 }
 
 body:not(.sa-body-editor) .sa-project-thumb {
+  display: inline;
   top: 1px;
   left: 1px;
   width: calc(100% - 2px);
@@ -32,6 +29,7 @@ body:not(.sa-body-editor) .sa-project-thumb.loading {
 }
 
 [class*="stage-wrapper_full-screen"] .sa-project-thumb {
+  display: inline;
   top: 3px;
   left: 3px;
   height: calc(100% - 6px);
